# fastsearch

./: .dockerignore  .gitignore  AI_AGENT_DEV_SPEC.md  CLAUDE.md  Cargo.toml  Dockerfile  README.en.md  README.md  README.zh-CN.md  README.zh.md  about.hbs  about.toml  deny.toml  docker-compose.yml  todo.md
.github/workflows/: ci.yml
benchmarks/: RESULTS.md  vector_bench.py
benchmarks/qdrant-adapter/: README.md  __init__.py  client.py  configure.py  search.py  upload.py
clients/python/: README.md  pyproject.toml  smoke_test.py  test_integrations.py
clients/python/fastsearch_client/: __init__.py  integrations.py
clients/typescript/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  tsconfig.test.json
crates/docparse-cli/: Cargo.toml
crates/docparse-cli/src/: batch.rs  main.rs  mcp.rs  progress.rs  resources.rs  server.rs
crates/docparse-core/: Cargo.toml
crates/docparse-core/src/: chunk.rs  enhance.rs  ir.rs  layout.rs  lib.rs  limits.rs  okf.rs  output.rs  quality.rs  reading_order.rs  synth.rs  table.rs  table_cluster.rs  textio.rs
crates/docparse-csv/: Cargo.toml
crates/docparse-docx/: Cargo.toml
crates/docparse-html/: Cargo.toml
crates/docparse-md/: Cargo.toml
crates/docparse-ocr/: Cargo.toml
crates/docparse-ocr/examples/: ppv2_run.rs
crates/docparse-ocr/src/: layout.rs  lib.rs  table_model.rs  transcribe.rs
crates/docparse-pdf/: Cargo.toml
crates/docparse-pdf/src/: cmap.rs  encoding.rs  encoding_tables.rs  font.rs  images.rs  interpreter.rs  lib.rs  matrix.rs  stdmetrics.rs  structure.rs
crates/docparse-vlm/: Cargo.toml
crates/docparse-vlm/src/: lib.rs
crates/docparse-xlsx/: Cargo.toml
crates/fastsearch-cli/: Cargo.toml
crates/fastsearch-cli/src/: ingest.rs  lib.rs  main.rs  tests.rs
crates/fastsearch-core/: Cargo.toml
crates/fastsearch-core/src/: error.rs  filter.rs  fusion.rs  lib.rs  model.rs  query.rs
crates/fastsearch-embed/: Cargo.toml
crates/fastsearch-embed/src/: http.rs  lib.rs
crates/fastsearch-engine/: Cargo.toml
crates/fastsearch-engine/src/: lib.rs
crates/fastsearch-engine/tests/: bench_capacity.rs  cdc_closed_loop.rs  relevance_gate.rs
crates/fastsearch-engine/tests/golden/: en_tech.baseline.json  en_tech.json  multimodal.baseline.json  multimodal.json  zh_finance.baseline.json  zh_finance.json
crates/fastsearch-eval/: Cargo.toml
crates/fastsearch-eval/src/: lib.rs
crates/fastsearch-mcp/: Cargo.toml
crates/fastsearch-mcp/src/: lib.rs  main.rs
crates/fastsearch-pg/: Cargo.toml
crates/fastsearch-pg/src/: error.rs  lib.rs  sql.rs
crates/fastsearch-rerank/: Cargo.toml
crates/fastsearch-rerank/src/: lib.rs
crates/fastsearch-server/: Cargo.toml
crates/fastsearch-server/src/: lib.rs  main.rs
crates/fastsearch-sync/: Cargo.toml
crates/fastsearch-sync/src/: lib.rs  pgoutput.rs  replication.rs
crates/fastsearch-text/: Cargo.toml
crates/fastsearch-text/src/: bm25.rs  error.rs  lib.rs  query_build.rs  schema.rs  tokenizer.rs
crates/fastsearch-vector/: Cargo.toml
crates/fastsearch-vector/src/: binary.rs  fht.rs  hnsw.rs  lib.rs  quant.rs  turbo.rs
deploy/: README.md  cloudnativepg.yaml
docs/: agent-integration.md  benchmark-strategy.md  cli-batch-and-progress.md  index.html  index.zh.html  ingestion-and-parsing.md  iteration-guide.md  phase-1-summary.md  phase-2-summary.md  roadmap.md  status.md  using-fastsearch-in-an-agent.md  在Agent中使用fastsearch.md  文件解析与摄取.md
docs/devlog/: 2026-06-27-A11-bm25-k1b生效.md  2026-06-27-B6-CDC写穿与断反馈环.md  2026-06-27-MM8a-embed多模态地基.md  2026-06-27-MM9-MM10-以图搜图基线.md  2026-06-27-docparse融合与多格式OCR摄取.md  2026-06-27-二值量化粗筛.md  2026-06-27-多模态完善.md  2026-06-28-CI热路径隔离与parse分档.md  2026-06-28-CLI客户端硬化.md  2026-06-28-CLI改纯REST客户端.md  2026-06-28-HNSW自适应过取.md  2026-06-28-MM6-signer-S1.md  2026-06-28-MM6-signer-S2.md  2026-06-28-MM6-signer-S3.md  2026-06-28-RaBitQ估计器.md  2026-06-30-HNSW墓碑自动压实.md  2026-06-30-真机验证-pg并发与ollama语义.md  2026-07-01-向量健康与GA收尾-会话总结.md  2026-07-05-代码审查修复-R1-R2.md  2026-07-05-代码审查修复-R3-安全加固.md  2026-07-05-代码审查修复-R4-CDC-PG.md  2026-07-06-代码审查修复-R5-工程卫生.md  2026-07-06-代码审查修复-会话总结.md  2026-07-21-TurboQuant压缩主索引.md  2026-07-22-FHT结构化旋转.md  2026-07-22-turbo-f32精排sidecar.md
docs/devlogs/: 2026-06-09-font-weight.md  2026-06-09-m2-ir-spine.md  2026-06-09-m3-readable-layout.md  2026-06-09-m5-docx-html.md  2026-06-09-m6-rag-chunking.md  2026-06-09-m7-routing-enhance.md  2026-06-09-n4-borderless-tables.md  2026-06-09-quality-session-summary.md  2026-06-09-ruled-tables.md  2026-06-09-word-spacing-fix.md  2026-06-10-chunk-order-fix.md  2026-06-10-g2-correction.md  2026-06-10-g2-layout-spike.md  2026-06-10-g3-table-spike.md  2026-06-10-g9a-tagged-pdf.md  2026-06-10-g9c-tag-veto-heading-levels.md  2026-06-10-n3-onnx-ocr.md  2026-06-10-running-header-and-teds-honesty.md  2026-06-10-session-summary.md  2026-06-11-g1b-eml-img-encoding.md  2026-06-11-h2-cls-rotation.md  2026-06-11-session-summary.md  2026-06-11-spans-and-embedded-images.md  2026-06-12-h7-polish.md  2026-06-17-ppocr-v6-integration.md  2026-06-18-cli-progress-and-batch.md  2026-06-19-truncated-pdf-diagnostic.md  2026-06-21-images-for-rag.md
docs/governance/: 2026-06-26-容量与SLO.md  2026-06-26-词典与第三方许可审.md  2026-07-21-向量旋转维度上限与DoS.md  2026-07-22-TQ+校准评估-不做.md
docs/plans/: 2026-06-19-okf-export.md  2026-06-21-images-for-rag.md  2026-06-22-publish-packages.md  2026-06-24-产品设计文档.md  2026-06-24-需求分析报告.md  2026-06-25-初始快照-bootstrap.md  2026-06-25-多模态功能设计与开发计划.md  2026-06-25-多模态数据支持-需求分析.md  2026-06-25-多模态职责划分-docparse与fastsearch.md  2026-06-25-派生索引持久化与崩溃安全.md  2026-06-25-迭代循环.md  2026-06-26-A9-向量HNSW与量化设计.md  2026-06-26-B6-pgvector直查档设计.md  2026-06-26-docparse融合开发计划.md  2026-06-26-docparse融合方案评估.md  2026-06-27-MM2c-bytes与MM6-inline媒资服务设计.md  2026-06-28-CLI改为REST客户端设计.md  (+30 more)
example/: .env.example  .gitignore  README.md  README.zh-CN.md  components.json  drizzle.config.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
fuzz/: Cargo.toml
fuzz/fuzz_targets/: img_parse.rs  pdf_parse.rs  text_formats.rs
scripts/: fetch-models.sh  stress.py
(+80 files in other folders)
