[workspace]
resolver = "2"
# docparse（subtree 并入 vendor/docparse，融合 Option B）保留其自有 workspace（含 vendored
# tract + OCR/VLM/raster 重 ONNX crate），从本仓 workspace 排除 → 不进 fastsearch 精简构建/收口；
# fastsearch-cli 经 `parse` feature path-依赖其 `docparse-core`/`-pdf`（轻，无 ONNX）。
exclude = ["vendor/docparse"]
members = [
    "crates/fastsearch-core",
    "crates/fastsearch-text",
    "crates/fastsearch-pg",
    "crates/fastsearch-sync",
    "crates/fastsearch-engine",
    "crates/fastsearch-vector",
    "crates/fastsearch-embed",
    "crates/fastsearch-cli",
    "crates/fastsearch-eval",
    "crates/fastsearch-server",
    "crates/fastsearch-rerank",
    "crates/fastsearch-mcp",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/yzlabai/fastsearch"
rust-version = "1.85"

[workspace.lints.rust]
# 不变量（CLAUDE.md §关键不变量）：fastsearch 主仓零 unsafe。引擎是纯逻辑 + trait
# 边界 + 外部 HTTP 嵌入，无手写 FFI/SIMD 需求，故 forbid 把「零 unsafe」固化成 CI
# 守得住的硬约束（forbid 不可被内层 allow 解除）。vendor/docparse 自有 workspace，
# 经根 exclude 隔离，不受此约束（其 5 处 libc unsafe + vendored tract 在彼处）。
unsafe_code = "forbid"

[workspace.dependencies]
# 集中管理依赖版本；crate 用 `dep.workspace = true` 继承（仿 docparse-rs）
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
thiserror = "2"
anyhow = "1"
tantivy = "0.26"
jieba-rs = "0.10"
tempfile = "3"
tokio-postgres = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync"] }
fastsearch-core = { path = "crates/fastsearch-core" }
fastsearch-text = { path = "crates/fastsearch-text" }
fastsearch-vector = { path = "crates/fastsearch-vector" }
fastsearch-engine = { path = "crates/fastsearch-engine" }
clap = { version = "4", features = ["derive"] }
ureq = { version = "2", features = ["json"] }
hmac = "0.13"
sha2 = "0.11"
axum = { version = "0.8", features = ["multipart"] }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

[profile.release]
lto = "thin"
codegen-units = 1
