[project]
name = "fastsearch-client"
version = "0.2.0"
description = "Zero-dependency Python client for the fastsearch REST API (hybrid search over docparse chunks)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "yzlab" }]
keywords = ["search", "rag", "hybrid-search", "bm25", "vector-search"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fastsearch_client"]
