[package]
name = "docparse-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI for docparse-rs"

[[bin]]
name = "docparse"
path = "src/main.rs"

[dependencies]
docparse-core = { path = "../docparse-core" }
docparse-pdf = { path = "../docparse-pdf" }
docparse-docx = { path = "../docparse-docx" }
docparse-html = { path = "../docparse-html" }
anyhow.workspace = true
clap.workspace = true
