[package]
name = "docparse-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI for docparse-rs"

[[bin]]
name = "docparse"
path = "src/main.rs"

[dependencies]
docparse-core = { path = "../docparse-core" }
docparse-pdf = { path = "../docparse-pdf" }
docparse-docx = { path = "../docparse-docx" }
docparse-html = { path = "../docparse-html" }
docparse-ocr = { path = "../docparse-ocr" }
docparse-vlm = { path = "../docparse-vlm" }
docparse-xlsx = { path = "../docparse-xlsx" }
docparse-pptx = { path = "../docparse-pptx" }
docparse-md = { path = "../docparse-md" }
docparse-csv = { path = "../docparse-csv" }
docparse-srt = { path = "../docparse-srt" }
docparse-tex = { path = "../docparse-tex" }
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
axum.workspace = true
tokio.workspace = true
