[package]
name = "docparse-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core IR, parser trait, reading-order and output for docparse-rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
encoding_rs.workspace = true
chardetng.workspace = true
rayon.workspace = true
libc.workspace = true
