[package]
name = "docparse-vlm"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "VLM enhancer over OpenAI-compatible services (vLLM/Ollama/LM Studio)"

[dependencies]
docparse-core = { path = "../docparse-core" }
docparse-raster = { path = "../docparse-raster" }
anyhow.workspace = true
serde_json.workspace = true
ureq.workspace = true
base64.workspace = true
