[package]
name = "fastsearch-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "fastsearch command-line interface: ingest docparse chunks and search."

[[bin]]
name = "fastsearch"
path = "src/main.rs"

[lib]
name = "fastsearch_cli"
path = "src/lib.rs"

[dependencies]
fastsearch-core.workspace = true
fastsearch-engine.workspace = true
fastsearch-text.workspace = true
fastsearch-eval = { path = "../fastsearch-eval" }
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
# 解析（docparse-rs 融合 Option B：摄取热路径，feature 门控，搜索热路径零依赖）。
# subtree 收编后改本仓内 path（vendor/docparse）；docparse 重依赖（tract/ONNX/OCR/VLM）在其
# 自有 workspace、被本仓根 `exclude` 隔离，不进 fastsearch 精简构建（见 docparse 融合方案 §4）。
docparse-core = { path = "../../vendor/docparse/crates/docparse-core", optional = true }
docparse-pdf = { path = "../../vendor/docparse/crates/docparse-pdf", optional = true }
docparse-docx = { path = "../../vendor/docparse/crates/docparse-docx", optional = true }
docparse-html = { path = "../../vendor/docparse/crates/docparse-html", optional = true }
docparse-md = { path = "../../vendor/docparse/crates/docparse-md", optional = true }
docparse-csv = { path = "../../vendor/docparse/crates/docparse-csv", optional = true }
docparse-xlsx = { path = "../../vendor/docparse/crates/docparse-xlsx", optional = true }
docparse-pptx = { path = "../../vendor/docparse/crates/docparse-pptx", optional = true }
docparse-srt = { path = "../../vendor/docparse/crates/docparse-srt", optional = true }
docparse-eml = { path = "../../vendor/docparse/crates/docparse-eml", optional = true }
docparse-img = { path = "../../vendor/docparse/crates/docparse-img", optional = true }
# OCR 增强器（PP-OCR，运行时加载 ONNX 模型；重 tract 依赖，仅 parse-ocr feature）。
docparse-ocr = { path = "../../vendor/docparse/crates/docparse-ocr", optional = true }

[features]
# 开启 docparse 多格式解析（core + 轻量格式解析器 + 图片，**无 ONNX/渲染**）；默认不开，保持 CLI 精简。
parse = [
    "dep:docparse-core",
    "dep:docparse-pdf",
    "dep:docparse-docx",
    "dep:docparse-html",
    "dep:docparse-md",
    "dep:docparse-csv",
    "dep:docparse-xlsx",
    "dep:docparse-pptx",
    "dep:docparse-srt",
    "dep:docparse-eml",
    "dep:docparse-img",
]
# OCR 增强（扫描件/图片无文本层 → PP-OCR 抽文本）：拉入 docparse-ocr（**重 ONNX/tract**）。
# 运行时需指 ONNX 模型目录（env `FASTSEARCH_OCR_MODELS`，如 docparse-rs/models/ppocr-v5）。
parse-ocr = ["parse", "dep:docparse-ocr"]

[dev-dependencies]
tempfile.workspace = true
