[package]
name = "fastsearch-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Core data model, query/filter AST, and fusion algorithms for fastsearch (no backend deps)."

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
