[package]
name = "fastsearch-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "fastsearch query/ingest orchestration: ties core fusion + text index + CDC sink into an end-to-end engine."

[dependencies]
fastsearch-core.workspace = true
fastsearch-text.workspace = true
fastsearch-vector.workspace = true
fastsearch-rerank = { path = "../fastsearch-rerank" }
fastsearch-sync = { path = "../fastsearch-sync" }
fastsearch-eval = { path = "../fastsearch-eval" }
fastsearch-embed = { path = "../fastsearch-embed" }
fastsearch-pg = { path = "../fastsearch-pg" }
tokio = { workspace = true, features = ["rt-multi-thread"] }
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
serde_json.workspace = true
tokio-postgres.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[lints]
workspace = true
