[package]
name = "fastsearch-eval"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Relevance evaluation harness for fastsearch: nDCG/recall/MRR/precision + CI regression gate."

[dependencies]
fastsearch-core.workspace = true
serde.workspace = true
serde_json.workspace = true
