[package]
name = "fastsearch-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "fastsearch REST server: API-key auth + non-bypassable per-document ACL + basic observability."

[[bin]]
name = "fastsearch-server"
path = "src/main.rs"

[lib]
name = "fastsearch_server"
path = "src/lib.rs"

[dependencies]
fastsearch-core.workspace = true
fastsearch-engine.workspace = true
fastsearch-text.workspace = true
fastsearch-embed = { path = "../fastsearch-embed" }
fastsearch-sync = { path = "../fastsearch-sync" }
fastsearch-pg = { path = "../fastsearch-pg" }
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
# 资产 URL 签名（MM6-signer）：HMAC-SHA256 签短时 token，让前端 <img src> 免 Bearer 取 inline 字节。
hmac.workspace = true
sha2.workspace = true

[dev-dependencies]
tower.workspace = true
http-body-util.workspace = true

[lints]
workspace = true
