[package]
name = "fastsearch-sync"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "CDC apply orchestration for fastsearch: idempotent, LSN-checkpointed application of Postgres changes to derived indexes."

[dependencies]
fastsearch-core.workspace = true
fastsearch-pg = { path = "../fastsearch-pg" }
anyhow.workspace = true
tokio-postgres.workspace = true
tokio.workspace = true
bytes = "1"
futures-util = "0.3"

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
