[package]
name = "fastsearch-text"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Tantivy-based derived full-text (BM25) index for fastsearch: schema, CJK tokenization, filtering."

[dependencies]
fastsearch-core.workspace = true
tantivy.workspace = true
jieba-rs.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
